# hootux

./: .gitignore  4k  Cargo.toml  README.md  TODO  build.rs  runcfg.toml  x86_64-owl-os-build.json
.cargo/: config.toml
common/src/: lib.rs
drivers/ahci/: Cargo.toml
drivers/ahci/src/: driver.rs  hba.rs  lib.rs  register.rs
drivers/ahci/src/driver/: block.rs  cmd_ctl.rs  file.rs  kernel_if.rs
drivers/ahci/src/hba/: command.rs  general_control.rs  port_control.rs
drivers/ahci/src/hba/command/: frame_information_structure.rs
drivers/hid-ps2/: Cargo.toml
drivers/hid-ps2/src/: controller.rs  lib.rs
drivers/ps2/: Cargo.toml
drivers/ps2/src/: controller.rs  keyboard.rs  lib.rs
drivers/usb/: Cargo.toml
drivers/usb/common/src/: lib.rs
drivers/usb/device-drivers/usb-hid/: Cargo.toml
drivers/usb/device-drivers/usb-hid/src/: descriptors.rs  driver_obj.rs  lib.rs  requests.rs
drivers/usb/device-drivers/usb-hid/src/driver_obj/: hid_if.rs
drivers/usb/hci/ehci/: Cargo.toml
drivers/usb/hci/ehci/src/: frame_lists.rs  lib.rs
drivers/usb/src/: ehci.rs  lib.rs  util.rs
drivers/usb/src/ehci/: device.rs  file.rs
drivers/usb/usb-proto/: Cargo.toml
drivers/usb/usb-proto/src/: descriptor.rs  lib.rs
hci/ehci/: Cargo.toml
hci/ehci/src/: lib.rs
hci/ehci/src/frame_lists/: mod.rs  periodic_list.rs  queue_element.rs
kernel/: Cargo.toml  build.rs
kernel-bin/: Cargo.toml
kernel-bin/src/: main.rs
kernel-interrupts-proc-macro/: Cargo.toml
kernel-interrupts-proc-macro/src/: file.rs  interrupts.rs  lazy_prop.rs  lib.rs  method_call.rs  multiboot2.rs  slablike.rs  sysfs_impl.rs
kernel/src/: allocator.rs  device_check.rs  elf.rs  gdt.rs  graphics.rs  interrupts.rs  kshell.rs  lib.rs  llvm.rs  logger.rs  main.rs  mem.rs  mp.rs  runlevel.rs  serial.rs  time.rs
kernel/src/allocator/: alloc_interface.rs  buddy_alloc.rs  combined_allocator.rs  fixed_size_block.rs  mmio_bump_alloc.rs  page_table_allocator.rs
kernel/src/fs/: device.rs  file.rs  mod.rs  sysfs.rs  tmpfs.rs  vfs.rs
kernel/src/fs/sysfs/: bus.rs  firmware.rs
kernel/src/fs/sysfs/firmware/: acpi.rs
kernel/src/graphics/: basic_output.rs  pixel.rs  vtty.rs
kernel/src/interrupts/: apic.rs  buff.rs  vector_tables.rs
kernel/src/interrupts/apic/: apic_structures.rs  ioapic.rs  pub_apic.rs  xapic.rs
kernel/src/interrupts/vector_tables/: interrupt_context.rs
kernel/src/kernel_structures/: mod.rs  mutex.rs  static_protected.rs  unsafe_box.rs  worm.rs
kernel/src/logger/: library.rs
kernel/src/mem/: allocator.rs  buddy_frame_alloc.rs  dma.rs  frame_attribute_table.rs  high_order_alloc.rs  mem_map.rs  offset_page_table.rs  thread_local_storage.rs  tlb.rs  virt_fixup.rs  write_combining.rs
kernel/src/mem/allocator/: alloc_interface.rs  allocator_linked_list.rs  buddy_alloc.rs  combined_allocator.rs  fixed_size_block.rs  linked_list.rs  page_table_allocator.rs
kernel/src/mem/allocator/buddy_alloc/: allocator_linked_list.rs
kernel/src/mem/write_combining/: alloc.rs
kernel/src/mp/: bitmap.rs  init.rs  x86_trampoline.asm
kernel/src/serial/: dispatcher.rs
kernel/src/system/: acpi.rs  driver_if.rs  mod.rs  pci.rs  sysfs.rs
kernel/src/system/pci/: capabilities.rs  configuration.rs  file.rs  meta.rs  scan.rs
kernel/src/system/pci/capabilities/: msi.rs
kernel/src/system/pci/configuration/: devclass.rs  register.rs
kernel/src/system/sysfs/: block.rs  systemctl.rs
kernel/src/task/: int_message_queue.rs  kernel_scheduler.rs  keyboard.rs  mod.rs  mp_executor.rs  util.rs
kernel/src/task/util/: sleep.rs
kernel/src/util/: io_write.rs  mod.rs  mutex.rs  single_arc.rs  static_protected.rs  unsafe_box.rs  vtable.rs  worm.rs
kernel/tests/: heap_allocation.rs  kstack_overflow.rs
lib/ata/: Cargo.toml
lib/ata/src/: command.rs  lib.rs  structures.rs
lib/ata/src/structures/: identification.rs
lib/elfload/: Cargo.toml
lib/elfload/src/: lib.rs  load.rs  relocation.rs
lib/hid/: Cargo.toml
lib/hid-8042/: Cargo.toml
lib/hid-8042/src/: controller.rs  keyboard.rs  lib.rs
lib/hid/src/: fstreams.rs  keyboard.rs  lib.rs  query.rs
lib/libboot/: Cargo.toml
lib/libboot/src/: boot_info.rs  common.rs  lib.rs  multiboot2_entry.rs  start.rs  variables.rs
lib/ps2/: Cargo.toml
lib/ps2/src/: keyboard.rs
loader/: Cargo.toml
loader/src/: main.rs
scripts/: kernel.ld
src/: acpi_driver.rs  allocator.rs  apic.rs  basic_graphics.rs  device_check.rs  gdt.rs  graphics.rs  interrupts.rs  kernel_statics.rs  lib.rs  logger.rs  main.rs  mem.rs  serial.rs  time.rs  vga_text.rs
src/allocator/: alloc_interface.rs  allocator_linked_list.rs  buddy_alloc.rs  bump.rs  fixed_size_block.rs  linked_list.rs  mmio_bump_alloc.rs  page_table_allocator.rs
src/allocator/buddy_alloc/: allocator_linked_list.rs
src/graphics/: basic_output.rs
src/interrupts/: apic.rs  vector_tables.rs
src/interrupts/apic/: apic_structures.rs  pub_apic.rs  xapic.rs
src/kernel_structures/: mod.rs  mutex.rs  static_protected.rs
src/mem/: mem_map.rs  offset_page_table.rs  page_table_tree.rs  thread_local_storage.rs
src/system/: acpi.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/time/: acpi_pm_timer.rs
tests/: basic_boot.rs  heap_allocation.rs  kstack_overflow.rs  should_panic.rs
x86_msr/: Cargo.toml
x86_msr/.cargo/: config.toml
x86_msr/src/: architecture.rs  lib.rs
