[package]
name = "hootux-loader"
version = "0.1.0"
edition = "2021"
readme = "README.md"
 
 [workspace]
members = ["loader","x86_msr","kernel","kernel-bin","drivers/ahci","lib/ata"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'

[dependencies]
bootloader = { path = "../bootloader", features = ["uefi_no_write_protect_bit"] }
hootux = { path = "./kernel" }
getopts = "0.2.21"
toml = "0.7.2"
daemonize = "0.5.0"

[build-dependencies]
bootloader = { path = "../bootloader", features = ["uefi_no_write_protect_bit"] }
hootux-bin = { path = "kernel-bin", artifact = "bin",  target = "x86_64-unknown-none" }