[package]
name = "hootux-loader"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]
members = ["x86_msr", "kernel", "kernel-bin", "drivers/ahci", "lib/ata", "lib/libboot", "lib/hid-8042"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'

[dependencies]
getopts = "0.2.21"
toml = "0.7.2"
daemonize = "0.5.0"
cargo_metadata = "0.18.1"
