[package]
name = "hootux-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hootux = { path = "../kernel" }
bootloader_api = { path = "../../bootloader/api" }
log = "0.4.17"
x86_64 = "0.14.10"
acpi = "4.1.1"