[package]
name = "hootux-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hootux = { path = "../kernel"}
log = "0.4.17"
x86_64 = "0.15.2"
acpi = "5.0.0"

multiboot2-header = "0.4.0"
libboot = { path = "../lib/libboot", features = ["uefi","multiboot2","debug-bits"] }
kernel-proc-macro = { path = "../kernel-interrupts-proc-macro"}
cast_trait_object = "0.1.3"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc","sink"] }
ahci = { path = "../drivers/ahci" }