[package]
name = "hootux-bin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
usb-hid = ["usb", "dep:usb-hid"]
usb = ["dep:usb"]
default = ["kernel-shell", "hootux/multiprocessing", "hootux/write-combining", "usb", "usb-hid"]
kernel-shell = ["hootux/kernel-shell"]

[dependencies]
hootux = { path = "../kernel" }
log = "0.4.17"
x86_64 = "0.15.2"
acpi = "5.2.0"

multiboot2-header = "0.4.0"
hatcher = { path = "../lib/libboot", features = ["uefi", "multiboot2", "define-start"] }
kernel-proc-macro = { path = "../kernel-interrupts-proc-macro" }
cast_trait_object = "0.1.3"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc", "sink"] }
ahci = { path = "../drivers/ahci" }
hid-ps2 = { path = "../drivers/hid-ps2" }
usb = { path = "../drivers/usb", optional = true }
ustar = { git = "https://github.com/an-owl/ustar" }
usb-hid = { path = "../drivers/usb/device-drivers/usb-hid", optional = true }