[package]
name = "kernel-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.58",features = ["full","extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.79"
multiboot2-header = "0.3.2"