[package]
name = "hootux"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc-debug-serial = [] #This is for debugging the memory allocator

[dependencies]
bootloader_api = "0.11.0"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.9"
uart_16550 = "0.2.16"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
crossbeam-queue = { version = "0.3.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.2", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = ["alloc"] }
noto-sans-mono-bitmap = "0.2.0"
acpi = "4.1.0"
x86_msr = { path  = "../x86_msr" }
raw-cpuid = "10.3.0"
log = "0.4.17"
bitflags = "1.3.2"
kernel-interrupts-proc-macro = {path = "../kernel-interrupts-proc-macro"}
atomic = "0.5.1"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "kstack_overflow"
harness = false



