[package]
name = "usb"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "common" }
ehci = { path = "hci/ehci" }
volatile = "0.6.1"
hootux = { path = "../../kernel" }
bitfield = "0.19.1"
derivative = { version = "2.2.0", features = ["use_core"] }
spin = "0.10.0"
suffix = { git = "https://github.com/an-owl/suffix.git" }
async-lock = "3.4.0"
futures-util = "0.3.31"
log = "0.4.27"
usb-cfg = { path = "usb-proto" }