[package]
name = "usb"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "common" }
ehci = { path = "hci/ehci" }
volatile = "0.6.1"
hootux = { path = "../../kernel" }
bitfield = "0.19.1"
derivative = { version = "2.2.0", features = ["use_core"] }
spin = "0.10.0"
suffix = { git = "https://github.com/an-owl/suffix.git" }
async-lock = { version = "3.4.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
log = "0.4.27"
usb-cfg = { path = "usb-proto" }
cast_trait_object = "0.1.4"
x86_64 = "0.15.2"
bitflags = "2.9.1"