[package]
name = "libboot"
version = "0.1.0"
edition = "2021"

[features]
debug-bits = [] # for debugging the library, may also help with debugging a kernel too.

[dependencies]
cfg-if = "1.0.0"
multiboot2-header = "0.3.2"
x86_64 = "0.15.1"

uefi = { version =  "0.27.0", optional = true }
multiboot2 = { version =  "0.19.0", optional = true }
