[package]
name = "hatcher"
version = "0.1.0"
edition = "2024"

[features]
debug-bits = [] # for debugging the library, may also help with debugging a kernel too.
define-start = []

[dependencies]
cfg-if = "1.0.0"
x86_64 = "0.15.2"

uefi = { version = "0.27.0", optional = true }
multiboot2 = { version = "0.23.1", optional = true }
suffix = { git = "https://github.com/an-owl/suffix" }