[package]
name = "usb-hid"
version = "0.1.0"
edition = "2024"

[dependencies]
hid-report = "1.0.0"
cast_trait_object = "0.1.4"
async-lock = { version = "3.4", default-features = false }
log = { version = "0.4", default-features = false }
futures-util = "0.3.31"

usb-cfg = { path = "../../usb-proto" }
usb = { path = "../../../usb" }
hootux = { path = "../../../../kernel" }
